--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
 
     <body>
       <div class="section">
+        <!-- navbar -->       
+        <nav>
+            <div class="nav-wrapper">
+                <nav class="nav blue darken-1">
+              <a href="#" class="brand-logo center">Churnator.ai</a>
+              <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">JavaScript</a></li>
+              </ul>
+            </div>
+          </nav>
+
       </div>
 
       <div class="divider"></div>
