--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <html>
     <head>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:700&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -45,6 +46,7 @@
           <label for="email">Email</label>
         </div>
       </div>
+
       <div class="row">
         <div class="col s12">
           This is an inline input field:
@@ -54,7 +56,7 @@
             <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
           </div>
         </div>
-      </div>
+      </div>       
     </form>
   </div>
 
@@ -63,9 +65,11 @@
   <div class="divider"></div>
   <div class="section">
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>  
     </body>
+    <style>
+      body{
+        font-family: 'Open Sans', sans-serif;
+      }
+    </style>
   </html>
