new results page

--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,14 @@
             <label for="email">Estimated Salary</label>
           </div>
         </div>
+       <div class="center-align">
+          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+              <a href="results.html" class="button"></a>Submit</a>
+              <!-- <i href="results.html" class="material-icons right">send</i> -->
+            </button>
+          <!-- <a href="results.html" class="button"></a>Submit</a> -->
+       </div>
+
     </div>
     </form>
   </div>
@@ -115,6 +123,14 @@
   body {
     font-family: 'Open Sans', sans-serif;
   }
+  a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    text-decoration: none;
+    color: initial;
+}
 </style>
 
 </html>
