--- a/public/index.html
+++ b/public/index.html
@@ -101,13 +101,10 @@
           </div>
         </div>
        <div class="center-align">
-          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-              <a href="results.html" class="button"></a>Submit</a>
-              <!-- <i href="results.html" class="material-icons right">send</i> -->
-            </button>
-          <!-- <a href="results.html" class="button"></a>Submit</a> -->
+          <a href="results.html" class="btn waves-effect waves-light" type="submit" name="action">Submit
+              <i class="material-icons right">send</i>
+          </a>
        </div>
-
     </div>
     </form>
   </div>
