--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <nav>
       <div class="nav-wrapper">
         <nav class="nav blue darken-1">
-          <a href="#" class="brand-logo center">Churnator.ai</a>
+          <a href="#" class="brand-logo center">churnator.ai</a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a href="sass.html">Sass</a></li>
             <li><a href="badges.html">Components</a></li>
